Updated html file

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <div class="container">
                 <div class="row steps__container">
                     <div class="steps__img--wrap">
-                        <img src="https://treact.owaiskhan.me/static/media/hero-screenshot-2.241aac1fbc66db29d873.png" alt="">
+                        <img class="steps__img--img" src="https://treact.owaiskhan.me/static/media/hero-screenshot-2.241aac1fbc66db29d873.png" alt="">
                     </div>
                     <div class="steps__description">
                         <h5 class="steps__name">Steps</h5>
@@ -303,8 +303,8 @@
 
                         <div class="values__reason">
                             <div class="values__reasons--head">
-                                <figure class="dollar">
-                                    <i class="fa-solid fa-dollar-sign dollar-sign">
+                                <figure class="briefcase">
+                                    <i class="fa-solid fa-briefcase">
                                         
                                     </i>
                                 </figure>
@@ -328,82 +328,89 @@
 
         <!-- Pricing -->
         <section id="pricing">
-            <div class="pricing__container">
-                <div class="row row__pricing">
-                    <div class="plans">
-                        <div class="plan__description">
-                            <h5 class="pricing features__head">
-                                <span class="text-color">Pricing</span>
-                            </h5>
-                            <h2 class="section__title">Reasonable & Flexible <span class="text-color">Plans</span></h2>
-                            <p class="section__para">
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit placeat, 
-                                a facere laboriosam voluptatem quod ratione voluptate et molestiae mollitia!
-                            </p>
+            <div class="container">
+                <div class="row">
+                    <div class="pricing__description">
+                        <h5 class="section__name pricing__name">Pricing</h5>
+                        <h2 class="section__title pricing__name">
+                            Reasonable & Flexible <span class="text--color">Plans</span>
+                        </h2>
+                        <p class="section__para pricing__name">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </p>
+                    </div>
+                    <div class="pricing__plans">
+                        <div class="pricing__plan">
+                            <div class="pricing__plan--top1"></div>
+                            <div class="pricing__plan--description">
+                                <h3 class="pricing__plan--title1">PERSONAL</h3>
+                                <h2 class="pricing__plan--price1">$17.99</h2>
+                                <p class="pricing__plan--text1">MONTHLY</p>
+                            </div>
+                            <div class="pricing__plan--benefits">
+                                <h4 class="pricing__plan--subtitle1">For Individuals</h4>
+                                <ul class="pricing__plan--list">
+                                    <li class="pricing__plan--benefit">30 Templates</li>
+                                    <li class="pricing__plan--benefit">7 Landing Pages</li>
+                                    <li class="pricing__plan--benefit">12 Internal Pages</li>
+                                    <li class="pricing__plan--benefit">Basic Assistance</li>
+                                </ul>
+                            </div>
+                            <div class="pricing__plan--links">
+                                <button class="pricing__plan--button">
+                                    <a href="" class="pricing__plan--link">Buy now</a>
+                                </button>
+                            </div>
                         </div>
-                        <div class="plan">
-                            <h5 class="plan__title">Personal</h5>
-                            <h3 class="plan__pricing">
-                                $17.99
-                            </h3>
-                            <h5 class="monthly">
-                                Monthly
-                            </h5>
-                            <hr>
-                            <h4 class="pricing__name">
-                                For individuals
-                            </h4>
-                            <p class="plan__info">30 templates</p>
-                            <p class="plan__info">7 Landing Pages</p>
-                            <p class="plan__info">12 Internal Pages</p>
-                            <p class="plan__info">Basic Assistance</p>
-                            <hr>
-                            <button type="button">Buy now</button>
+                        <div class="pricing__plan2">
+                            <div class="pricing__plan--top2"></div>
+                            <div class="pricing__plan--description">
+                                <h3 class="pricing__plan--title2">BUSINESS</h3>
+                                <h2 class="pricing__plan--price2">$37.99</h2>
+                                <p class="pricing__plan--text2">MONTHLY</p>
+                            </div>
+                            <div class="pricing__plan--benefits">
+                                <h4 class="pricing__plan--subtitle2">For Small Businesses</h4>
+                                <ul class="pricing__plan--list">
+                                    <li class="pricing__plan--benefit2">60 Templates</li>
+                                    <li class="pricing__plan--benefit2">15 Landing Pages</li>
+                                    <li class="pricing__plan--benefit2">22 Internal Pages</li>
+                                    <li class="pricing__plan--benefit2">Priority Assistance</li>
+                                </ul>
+                            </div>
+                            <div class="pricing__plan--links">
+                                <button class="pricing__plan--button2">
+                                    <a href="" class="pricing__plan--link2">Buy now</a>
+                                </button>
+                            </div>
                         </div>
-
-                        <div class="plan">
-                            <h5 class="plan__title">Business</h5>
-                            <h3 class="plan__pricing">
-                                $37.99
-                            </h3>
-                            <h5 class="monthly">
-                                Monthly
-                            </h5>
-                            <hr>
-                            <h4 class="pricing__name">
-                                For Small Business
-                            </h4>
-                            <p class="plan__info">60 templates</p>
-                            <p class="plan__info">15 Landing Pages</p>
-                            <p class="plan__info">22 Internal Pages</p>
-                            <p class="plan__info">Priority Assistance</p>
-                            <hr>
-                            <button type="button">Buy now</button>
-                        </div>
-
-                        <div class="plan">
-                            <h5 class="plan__title">Enterprise</h5>
-                            <h3 class="plan__pricing">
-                                $57.99
-                            </h3>
-                            <h5 class="monthly">
-                                Monthly
-                            </h5>
-                            <hr>
-                            <h4 class="pricing__name">
-                                For Large Companies
-                            </h4>
-                            <p class="plan__info">90 templates</p>
-                            <p class="plan__info">27 Landing Pages</p>
-                            <p class="plan__info">37 Internal Pages</p>
-                            <p class="plan__info">Personal Assistance</p>
-                            <hr>
-                            <button type="button">Buy now</button>
+                        <div class="pricing__plan">
+                            <div class="pricing__plan--top3"></div>
+                            <div class="pricing__plan--description">
+                                <h3 class="pricing__plan--title1">ENTERPRISE</h3>
+                                <h2 class="pricing__plan--price1">$57.99</h2>
+                                <p class="pricing__plan--text1">MONTHLY</p>
+                            </div>
+                            <div class="pricing__plan--benefits">
+                                <h4 class="pricing__plan--subtitle1">For Large Companies</h4>
+                                <ul class="pricing__plan--list">
+                                    <li class="pricing__plan--benefit">90 Templates</li>
+                                    <li class="pricing__plan--benefit">27 Landing Pages</li>
+                                    <li class="pricing__plan--benefit">37 Internal Pages</li>
+                                    <li class="pricing__plan--benefit">Personal Assistance</li>
+                                </ul>
+                            </div>
+                            <div class="pricing__plan--links">
+                                <button class="pricing__plan--button3">
+                                    <a href="" class="pricing__plan--link">Buy now</a>
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+          </section>
 
         <!-- Testimonials -->
         <!-- <section id="testimonials">
