--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         </div>
     </header>
     <main>
+        <!-- features -->
         <section id="features">
             <div class="container">
                 <div class="row">
@@ -219,6 +220,7 @@
                 </div>
             </div>
         </section>
+        <!-- work -->
         <section id="work">
             <div class="container">
                 <div class="row work__container">
@@ -228,15 +230,15 @@
                             Designed & Developed by
                             <span class="text--color">Professionals</span>
                         </h2>
-                    <p class="section__para">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                        enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi ut aliquip ex ea commodo consequat.
-                    </p>
-                    <button class="section__button">
-                        <a href="#" class="section__button--link">Learn more</a>
-                    </button>
+                        <p class="section__para">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                            enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                            nisi ut aliquip ex ea commodo consequat.
+                        </p>
+                        <button class="section__button">
+                            <a href="#" class="section__button--link">Learn more</a>
+                        </button>
                     </div>
                     <div class="work__img--wrap">
                         <img
@@ -248,6 +250,7 @@
                 </div>
             </div>
         </section>
+        <!-- steps -->
         <section id="steps">
             <div class="container">
                 <div class="row steps__container">
@@ -299,6 +302,7 @@
                 </div>
             </div>
         </section>
+        <!-- values -->
         <section id="values">
             <div class="container">
                 <div class="row work__container">
@@ -308,52 +312,54 @@
                             We Always Abide by
                             <span class="text--color">Our Principles.</span>
                         </h2>
-                    <p class="section__para">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                        enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi ut aliquip ex ea commodo consequat.
-                    </p>
-                    <div class="values__reasons">
-                        <div class="values__reason">
-                            <div class="values__reasons--head">
-                                <figure class="dollar">
-                                <i class="fa-solid fa-dollar-sign dollar-sign"></i>
-                                </figure>
-                                <h3 values__reason--title>Affordable</h3>
-                            </div>
-                                <p class="values__reason--paragraph">
-                                    We promise to offer you the best rate we can - at par with
-                                    the industry standard.
-                                </p>
-                            </div>
+                        <p class="section__para">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                            enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                            nisi ut aliquip ex ea commodo consequat.
+                        </p>
+                        <div class="values__reasons">
                             <div class="values__reason">
                                 <div class="values__reasons--head">
-                                    <figure class="briefcase">
-                                    <i class="fa-solid fa-briefcase"></i>
+                                    <figure class="dollar">
+                                    <i class="fa-solid fa-dollar-sign dollar-sign"></i>
                                     </figure>
-                                    <h3 values__reason--title>Professionalism</h3>
+                                    <h3 values__reason--title>Affordable</h3>
                                 </div>
-                                <p class="values__reason--paragraph">
-                                    We assure you that our templates are designed and created by
-                                    professional designers.
-                                </p>
+                                    <p class="values__reason--paragraph">
+                                        We promise to offer you the best rate we can - at par with
+                                        the industry standard.
+                                    </p>
+                                </div>
+                                <div class="values__reason">
+                                    <div class="values__reasons--head">
+                                        <figure class="briefcase">
+                                        <i class="fa-solid fa-briefcase"></i>
+                                        </figure>
+                                        <h3 values__reason--title>Professionalism</h3>
+                                    </div>
+                                    <p class="values__reason--paragraph">
+                                        We assure you that our templates are designed and created by
+                                        professional designers.
+                                    </p>
+                                </div>
                             </div>
+                            <button class="section__button">
+                                <a href="" class="section__button--link">Learn more</a>
+                            </button>
+                            </div>
+                            <div class="values__img--wrap">
+                            <img
+                                class="values__img"
+                                src="https://treact.owaiskhan.me/static/media/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg"
+                                alt=""
+                            />
                         </div>
-                        <button class="section__button">
-                            <a href="" class="section__button--link">Learn more</a>
-                        </button>
-                        </div>
-                        <div class="values__img--wrap">
-                        <img
-                            class="values__img"
-                            src="https://treact.owaiskhan.me/static/media/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg"
-                            alt=""
-                        />
                     </div>
                 </div>
             </div>
         </section>
+        <!-- pricing -->
         <section id="pricing">
             <div class="container">
                 <div class="row">
@@ -383,11 +389,11 @@
                                     <li class="pricing__plan--benefit">12 Internal Pages</li>
                                     <li class="pricing__plan--benefit">Basic Assistance</li>
                                 </ul>
-                            </div>
-                            <div class="pricing__plan--links">
-                                <button class="pricing__plan--button">
-                                    <a href="" class="pricing__plan--link">Buy now</a>
-                                </button>
+                                <div class="pricing__plan--links">
+                                    <button class="pricing__plan--button">
+                                        <a href="#" class="pricing__plan--link">Buy now</a>
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -406,12 +412,12 @@
                                 <li class="pricing__plan--benefit2">22 Internal Pages</li>
                                 <li class="pricing__plan--benefit2">Priority Assistance</li>
                             </ul>
+                            <div class="pricing__plan--links">
+                                <button class="pricing__plan--button2">
+                                    <a href="" class="pricing__plan--link2">Buy now</a>
+                                </button>
+                            </div>
                         </div>
-                    </div>
-                    <div class="pricing__plan--links">
-                        <button class="pricing__plan--button2">
-                            <a href="" class="pricing__plan--link2">Buy now</a>
-                        </button>
                     </div>
                     <div class="pricing__plan">
                         <div class="pricing__plan--top3"></div>
@@ -428,74 +434,71 @@
                                 <li class="pricing__plan--benefit">37 Internal Pages</li>
                                 <li class="pricing__plan--benefit">Personal Assistance</li>
                             </ul>
-                        </div>
-                        <div class="pricing__plan--links">
-                            <button class="pricing__plan--button3">
-                                <a href="#" class="pricing__plan--link">Buy now</a>
-                            </button>
+                            <div class="pricing__plan--links">
+                                <button class="pricing__plan--button3">
+                                    <a href="#" class="pricing__plan--link">Buy now</a>
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+    <!-- footer -->
     <footer>
         <div class="row">
             <div class="footer__container">
                 <div class="footer__links">
                     <h5 class="footer__title">Main</h5>
                     <ul class="footer__list">
-                        <a href="" class="footer__link">Blog</a>
-                        <a href="" class="footer__link">FAQs</a>
-                        <a href="" class="footer__link">Support</a>
-                        <a href="" class="footer__link">About us</a>
+                        <a href="#" class="footer__link">Blog</a>
+                        <a href="#" class="footer__link">FAQs</a>
+                        <a href="#" class="footer__link">Support</a>
+                        <a href="#" class="footer__link">About us</a>
                     </ul>
                 </div>
                 <div class="footer__links">
                     <h5 class="footer__title">Product</h5>
                     <ul class="footer__list">
-                        <a href="" class="footer__link">Log in</a>
-                        <a href="" class="footer__link">Personal</a>
-                        <a href="" class="footer__link">Business</a>
-                        <a href="" class="footer__link">Team</a>
+                        <a href="#" class="footer__link">Log in</a>
+                        <a href="#" class="footer__link">Personal</a>
+                        <a href="#" class="footer__link">Business</a>
+                        <a href="#" class="footer__link">Team</a>
                     </ul>
                 </div>
                 <div class="footer__links">
                     <h5 class="footer__title">Press</h5>
                     <ul class="footer__list">
-                        <a href="" class="footer__link">Logos</a>
-                        <a href="" class="footer__link">Events</a>
-                        <a href="" class="footer__link">Stories</a>
-                        <a href="" class="footer__link">Office</a>
+                        <a href="#" class="footer__link">Logos</a>
+                        <a href="#" class="footer__link">Events</a>
+                        <a href="#" class="footer__link">Stories</a>
+                        <a href="#" class="footer__link">Office</a>
                     </ul>
                 </div>
                 <div class="footer__links">
                     <h5 class="footer__title">Team</h5>
                     <ul class="footer__list">
-                        <a href="" class="footer__link">Career</a>
-                        <a href="" class="footer__link">Founders</a>
-                        <a href="" class="footer__link">Culture</a>
-                        <a href="" class="footer__link">Onbroading</a>
+                        <a href="#" class="footer__link">Career</a>
+                        <a href="#" class="footer__link">Founders</a>
+                        <a href="#" class="footer__link">Culture</a>
+                        <a href="#" class="footer__link">Onbroading</a>
                     </ul>
                 </div>
                 <div class="footer__links">
                     <h5 class="footer__title">Legal</h5>
                     <ul class="footer__list">
-                        <a href="" class="footer__link">GDPR</a>
-                        <a href="" class="footer__link">Privacy Policy</a>
-                        <a href="" class="footer__link">Terms of service</a>
-                        <a href="" class="footer__link">Disclaimer</a>
+                        <a href="#" class="footer__link">GDPR</a>
+                        <a href="#" class="footer__link">Privacy Policy</a>
+                        <a href="#" class="footer__link">Terms of service</a>
+                        <a href="#" class="footer__link">Disclaimer</a>
                     </ul>
                 </div>
             </div>
             <div class="footer__description">
                 <div class="footer__logo">
                     <figure class="footer__logo">
-                    <img
-                        class="footer__logo--img"
-                        src="https://treact.owaiskhan.me/static/media/logo-light.d9a5d1b5be5ea077b26864fdfc2e96a4.svg"
-                        alt=""
-                    />
+                        <img class="footer__logo--img" src="https://treact.owaiskhan.me/static/media/logo-light.d9a5d1b5be5ea077b26864fdfc2e96a4.svg" alt="" />
                     </figure>
                     <a href="https://treact.owaiskhan.me/" class="footer__title">Treact</a>
                 </div>
@@ -504,17 +507,18 @@
                 © 2018 Treact Inc. All Rights Reserved.
             </div>
             <div class="footer__media--wrap">
-                <a href="" class="footer__media">
+                <a href="#" class="footer__media">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
-                <a href="" class="footer__media">
+                <a href="#" class="footer__media">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
-                <a href="" class="footer__media">
+                <a href="#" class="footer__media">
                     <i class="fa-brands fa-twitter"></i>
                 </a>
             </div>
         </div>
     </footer>
+    <!-- footer -->
   </body>
 </html>
