Updated html file

--- a/index.html
+++ b/index.html
@@ -202,13 +202,14 @@
                     </div>
                     <div class="features__service">
                         <div class="features__service--wrap">
+                            <div class="">
                                 <img
                                     src="https://treact.owaiskhan.me/static/media/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg"
                                     alt=""
                                     class="features__service--img"
                                 />
-                                </div>
-                                <div class="features__text--container">
+                            </div>
+                            <div class="features__text--container">
                                 <span class="features__text--title">Easy</span>
                                 <p class="features__text--para">
                                     Lorem ipsum donor amet siti ceali ut enim ad minim veniam,
