Updated html file

--- a/index.html
+++ b/index.html
@@ -323,10 +323,11 @@
                             <div class="values__reason">
                                 <div class="values__reasons--head">
                                     <figure class="dollar">
-                                    <i class="fa-solid fa-dollar-sign dollar-sign"></i>
+                                        <i class="fa-solid fa-dollar-sign dollar-sign"></i>
                                     </figure>
                                     <h3 values__reason--title>Affordable</h3>
                                 </div>
+                                <div class="">
                                     <p class="values__reason--paragraph">
                                         We promise to offer you the best rate we can - at par with
                                         the industry standard.
@@ -344,17 +345,15 @@
                                         professional designers.
                                     </p>
                                 </div>
-                            </div>
-                            <button class="section__button">
-                                <a href="" class="section__button--link">Learn more</a>
-                            </button>
+                                <div class="">
+                                    <button class="section__button">
+                                        <a href="#" class="section__button--link">Learn more</a>
+                                    </button>
+                                </div>
                             </div>
                             <div class="values__img--wrap">
-                            <img
-                                class="values__img"
-                                src="https://treact.owaiskhan.me/static/media/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg"
-                                alt=""
-                            />
+                                <img class="values__img" src="https://treact.owaiskhan.me/static/media/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg" alt="" />
+                            </div>
                         </div>
                     </div>
                 </div>
